--- a/index.html
+++ b/index.html
@@ -1187,10 +1187,7 @@ Start Our Team
 					</a>
 					<br />
 
-					<p>Design And Developed by <a href="http://www.themefisher.com">Themefisher.com</a>. Copyright
-						&copy; <script>
-							document.write(new Date().getFullYear())
-						</script>. All Rights Reserved.</p>
+					<p>Copy right with bikashdulal150@gmail.com</P>
 				</div>
 				<!-- /copyright -->
 
